# rok

./: .gitignore  Cargo.toml  LICENSE  README.md  bench-vs-ngn-k.sh  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  verbs.rs
tests/: aoc.rs  ngnk.rs  tests.rs
tests/aoc/2015/: day01.k  day01.p2.k
tests/aoc/2024/: day01.k  day02.k  day03.k  day03.txt  day04.k
