[package]
name = "rok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
env_logger = "0.10.0"
indexmap = { version = "2.0.0", features = ["rayon"] }
itertools = "0.12.0"
log = "0.4.19"
polars = { version = "0.35.4", features = ["performant", "simd", "lazy", "parquet", "dtype-categorical"] }
rustyline = "13.0.0"
