[package]
name = "roklang"
version = "0.1.0"
edition = "2021"
description = "A K interpreter written in rust. Inspired by ok and ngn/k and built on polars."
license = "ISC"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
directories = "5.0.1"
env_logger = "0.11.3"
indexmap = { version = "2.0.0", features = ["rayon"] }
itertools = "0.13.0"
log = "0.4.19"
# polars = { version = "0.41.3", features = ["performant", "nightly", "simd", "cse", "lazy", "parquet", "dtype-categorical", "strings"] }
polars = { version = "0.41.3", features = ["performant", "cse", "lazy", "parquet", "dtype-categorical", "strings"] }
rand = "0.8.5"
rustyline = "14.0.0"

[[bin]]
name = "rok"
